_sass/base.scss
@charset "utf-8";

:root {
  --default-font-px: 16;
  --font-size: 1rem;
  --font-family: ui-sans-serif, 'Segoe UI', Roboto, Ubuntu, 'Noto Sans', 'Liberation Sans', system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --font-family-monospace: ui-monospace, 'Segoe UI Mono', 'Roboto Mono', 'Ubuntu Monospace', 'Noto Sans Mono', 'Liberation Mono', 'SF Mono', SFMono-Regular, monospace, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  --spacing: 1em;
  --line-height: 1.5;
  --reduced-line-height: 1.2;
  /* Calculate integer pixel values depending on the font size (1rem = 16px) */
  --border-size:            calc(var(--font-size) *  1/var(--default-font-px));
  --border-size-thick:      calc(var(--font-size) *  2/var(--default-font-px));
  --border-radius:          calc(var(--font-size) *  3/var(--default-font-px));
  --x-script:               calc(var(--font-size) * 11/var(--default-font-px));
  --small-font-size:        calc(var(--font-size) * 14/var(--default-font-px));
  --pre-font-size:          calc(var(--font-size) * 15/var(--default-font-px));
  --list-heading-font-size: calc(var(--font-size) * 24/var(--default-font-px));
  --big-font-size:          calc(var(--font-size) * 32/var(--default-font-px));
  --emoji-font-size:        calc(var(--font-size) * 96/var(--default-font-px));
}

html {
  max-width: 720px; /* 720px (= 66.182ch in system-ui macOS Sonoma), use 1440w images for 2x displays */
  margin: 0 auto;
  padding: calc(var(--spacing) * 1/2);
  font: var(--font-size) / var(--line-height) var(--font-family);
  // font-size-adjust: from-font; /* Baseline 2024-07 */
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

body { margin: 0; }
h1, h2, h3, h4, h5, h6 { line-height: var(--reduced-line-height); text-wrap: balance; } /* Baseline 2024-05 */
h1 { margin-block: 0.67em; margin: 0 0 var(--spacing); font-size: var(--big-font-size); text-align: center; }
p { text-align: justify; hyphens: auto; } /* Baseline 2023-09 */
ul, ol { padding: 0 calc(var(--spacing)) 0 calc(var(--spacing) * 2); }
ul > ul, ol > ol, ul > ol, ol > ul, li > ul, li > ol { padding-left: calc(var(--spacing) * 5/4); padding-right: 0; }
blockquote { margin-left: calc(var(--spacing) * 1/2); padding-left: calc(var(--spacing) * 3/4); border-left: var(--border-size) solid var(--line-color); }
pre, code { border: var(--border-size) solid var(--pre-bg-color); border-radius: var(--border-radius); background-color: var(--pre-bg-color); font-family: var(--font-family-monospace); font-size: var(--pre-font-size); tab-size: 2; }
pre { padding: calc(var(--spacing) * 1/2) calc(var(--spacing) * 3/4); overflow-x: auto; }
code { padding: calc(var(--spacing) * 1/8) calc(var(--spacing) * 1/4); }
pre > code { border: 0; padding-right: 0; padding-left: 0; }
sub, sup { font-size: var(--x-script); line-height: 0; }
figure { margin-left: 0; margin-right: 0; max-width: 100%; text-align: center; font-size: var(--small-font-size); line-height: 1; }
figure:has(iframe) > figcaption { margin-top: var(--spacing); } /* Baseline 2023-12 */
table { border-collapse: collapse; margin: var(--spacing) auto; }
th, td { padding: calc(var(--spacing) * 1/2); }
thead th { border-bottom: var(--border-size-thick) solid var(--line-color); }
tbody th, tbody td { border-top: var(--border-size) solid var(--line-color); }
tbody + tbody,
tfoot th, tfoot td { border-top: var(--border-size-thick) solid var(--line-color); }
hr { margin: calc(var(--spacing) * 2) 0; border: none; border-top: var(--border-size) solid var(--line-color); }
body > header { margin: calc(var(--spacing) * 1/2) auto; text-align: center; font-size: var(--emoji-font-size); line-height: 1; }
body > header a { text-decoration: none; }
body > main { margin-bottom: calc(var(--spacing) * 3); }
body > main > section > section > article,
body > main > section > article { margin-bottom: calc(var(--spacing) * 2); }
body > main > section > section > article > header > time,
body > main > section > article > header > time { display: block; font-size: var(--small-font-size); line-height: var(--reduced-line-height); }
body > main > section > section > article > header > h4,
body > main > section > article > header > h3 { margin: calc(var(--spacing) * 1/5) 0; font-size: var(--list-heading-font-size); font-weight: 500; line-height: 1.1; }
body > main > section > section > article > p,
body > main > section > article > p { margin: 0; line-height: 1.3; }
body > main > section > footer,
body > main > footer { margin-top: calc(var(--spacing) * 2); font-size: var(--small-font-size); }
body > main > article > header > h1:has(+time) { margin: 0 0 calc(var(--spacing) * 1/2); } /* Baseline 2023-12 */
body > main > article > header > h1 + time { display: block; margin-bottom: calc(var(--spacing) * 2); text-align: center; font-size: var(--font-size); }
body > main img { display: block; margin: 0 auto var(--spacing); max-width: 100%; height: auto; }
body > main > article > div[itemprop="articleBody"] > p[itemprop="abstract"] { text-align: center; text-wrap: balance; } /* Baseline 2024-05 */
hr:has(+div[role="doc-endnotes"]) { margin-bottom: var(--spacing); } /* Baseline 2023-12 */
div[role="doc-endnotes"] { margin-top: 0; font-size: var(--small-font-size); line-height: var(--line-height); }

